data/derived/comb/progs/unify/prog1457.ml.out
Characters 362-377:
  removeZero (add (padZero l1 l2))
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type 'a * 'b
